--- a/components/message/style.scss
+++ b/components/message/style.scss
@@ -4,17 +4,24 @@
 	padding: 6px 30px 3px 70px;
 }
 
+.reply {
+	padding: 6px 0px 3px 30px;
+}
+
 .name {
   color: #bbb;
 }
 
 .time {
 	color: #bbb;
-	font-size: 11px;
 	font-weight: 400;
 	margin: 0 0 0 6px;
 }
 
 .today {
 	color: #36a5d9;
+}
+
+.meta span, .meta a, .meta i {
+	margin-right: 0.3em;
 }
