--- a/components/message/style.scss
+++ b/components/message/style.scss
@@ -25,3 +25,9 @@
 .meta span, .meta a, .meta i {
 	margin-right: 0.3em;
 }
+
+.action, .action span {
+	font-size: 14px;
+	text-decoration: none;
+	cursor: pointer;
+}
