--- a/lib/message/style.scss
+++ b/lib/message/style.scss
@@ -1,4 +1,5 @@
 @import "../_base";
+@import "../_mixins";
 
 .message {
 	padding: 6px 30px 3px 70px;
@@ -30,4 +31,18 @@
 	font-size: 14px;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+.message_count {
+	margin: 0 4px;
+  display: inline-block;
+  position: relative;
+  padding: 0px 3px;
+  background: #fff;
+  color: #999;
+  border: #999 solid 1px;
+  border-radius: 3px;
+  @include arrow-left($width: 4px, $length: 4px, $background-color: #fff, $border-color: #999);
+  font-size: 8pt;
+  font-weight: normal;
 }
