--- a/lib/message/style.scss
+++ b/lib/message/style.scss
@@ -59,6 +59,14 @@ a.message_count, a.message_count:hover {
 	text-decoration: none;
 }
 
+.reply_form {
+	position: relative;
+	padding: .6em 0 1.2em 4em;
+	width: 100%;
+}
+
+$message-input-focus-color: #1fadc5;
+
 .message_input {
 	width: 100%;
 	height: 100%;
@@ -70,12 +78,90 @@ a.message_count, a.message_count:hover {
 	outline: none;
 	font-size: .9em;
 	line-height: 1.5;
-	cursor: pointer;
+	resize: vertical;
 }
 
-$focus-color: #1fadc5;
-
 .message_input:focus {
-	box-shadow: 0 0 .2em $focus-color inset;
-  border-color: $focus-color;
+	box-shadow: 0 0 .2em $message-input-focus-color inset;
+  border-color: $message-input-focus-color;
+}
+
+.reply_form.focused .show_help {
+	display: inline-block;
+}
+.show_help {
+	cursor: pointer;
+	display: none;
+	position: absolute;
+	right: .2em;
+	padding: .3em;
+	transition: color .2s;
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: none;
+	color: $message-input-focus-color;
+}
+.show_help:hover {
+	text-decoration: none;
+}
+
+.reply_form.focused .reply_controls {
+	display: block;
+}
+.reply_controls {
+	display: none;
+	text-align: right;
+	margin: .6em 0;
+	position: relative;
+}
+
+.upload_button {
+	cursor: pointer;
+	position: absolute;
+	font-size: 20px;
+  right: .4em;
+  top: -2em;
+	text-decoration: none;
+	color: rgba(0,0,0,0.4);
+}
+.upload_button:hover {
+	text-decoration: none;
+	color: $message-input-focus-color;
+}
+
+.monospaced {
+	font-family: 'Bitstream Vera Sans Mono',Menlo,Monaco,Courier,monospace;
+}
+
+.help_format {
+	padding: .6em 0;
+}
+
+.help_code {
+	border: 1px solid #ddd;
+	border-width: 1px 0;
+	padding: .6em 0;
+	margin-bottom: 1.2em;
+}
+
+.help_post em {
+	background: #eee;
+	border-radius: .3em;
+	padding: .1em .4em 0;
+	color: #333;
+	font-weight: bold;
+	display: inline-block;
+}
+
+.help .Popover-body {
+  display: inline-flex;
+  flex-direction: column;
+  padding: 2rem 4rem;
+  background: white;
+  border-radius: 0.3rem;
+	box-shadow: 0 0 10px rgba(0,0,0,0.25);
+}
+
+.help .Popover-tipShape {
+  fill: white;
 }
