--- a/components/message/style.scss
+++ b/components/message/style.scss
@@ -79,44 +79,15 @@ $mc-border-color: #9197a3;
 	width: 100%;
 }
 
-$message-input-focus-color: #1fadc5;
-
 .message_input {
 	width: 100%;
 	height: 100%;
 	min-height: 2em;
 	padding: .6em;
-	border: 1px solid rgba(0,0,0,0.1);
-  border-radius: .2em;
 	overflow: hidden;
-	outline: none;
 	font-size: .9em;
 	line-height: 1.5;
 	resize: vertical;
-}
-
-.message_input:focus {
-	box-shadow: 0 0 .2em $message-input-focus-color inset;
-  border-color: $message-input-focus-color;
-}
-
-.reply_form.focused .show_help {
-	display: inline-block;
-}
-.show_help {
-	cursor: pointer;
-	display: none;
-	position: absolute;
-	right: .2em;
-	padding: .3em;
-	transition: color .2s;
-	font-size: 16px;
-	font-weight: bold;
-	text-decoration: none;
-	color: $message-input-focus-color;
-}
-.show_help:hover {
-	text-decoration: none;
 }
 
 .reply_form.focused .reply_controls {
@@ -140,42 +111,5 @@ $message-input-focus-color: #1fadc5;
 }
 .upload_button:hover {
 	text-decoration: none;
-	color: $message-input-focus-color;
-}
-
-.monospaced {
-	font-family: 'Bitstream Vera Sans Mono',Menlo,Monaco,Courier,monospace;
-}
-
-.help_format {
-	padding: .6em 0;
-}
-
-.help_code {
-	border: 1px solid #ddd;
-	border-width: 1px 0;
-	padding: .6em 0;
-	margin-bottom: 1.2em;
-}
-
-.help_post em {
-	background: #eee;
-	border-radius: .3em;
-	padding: .1em .4em 0;
-	color: #333;
-	font-weight: bold;
-	display: inline-block;
-}
-
-.help .Popover-body {
-  display: inline-flex;
-  flex-direction: column;
-  padding: 2rem 4rem;
-  background: white;
-  border-radius: 0.3rem;
-	box-shadow: 0 0 10px rgba(0,0,0,0.25);
-}
-
-.help .Popover-tipShape {
-  fill: white;
+	color: $input-focus-color;
 }
