--- a/components/message/style.scss
+++ b/components/message/style.scss
@@ -3,12 +3,16 @@
 @import "../_shapes";
 
 .message {
-	padding: 6px 30px 3px 70px;
-	min-height: 70px;
+	margin: 2px 0px;
+	padding: 0px 20px 0px 80px;
+}
+
+.message_body {
+	min-height: 44px;
 }
 
 .reply {
-	padding: 6px 0px 3px 30px;
+	padding: 0px 0px 0px 40px;
 }
 
 .name {
