--- a/lib/thread/style.scss
+++ b/lib/thread/style.scss
@@ -17,7 +17,7 @@
 .thread_header {
 	font-weight: bold;
 	cursor: default;
-	padding: 6px 30px 3px 70px;
+	padding: 4px 0px;
 }
 
 .topic_selected {
