--- a/components/message/style.scss
+++ b/components/message/style.scss
@@ -1,120 +1,7 @@
 @import "../_base";
 @import "../_mixins";
 @import "../_shapes";
-
-.message {
-	margin: 2px 0px;
-	padding: 0px 20px 0px 80px;
-}
-
-.message_body {
-	min-height: 44px;
-}
-
-.reply {
-	padding: 0px 0px 0px 40px;
-}
-
-.name {
-  color: #bbb;
-}
-
-.time {
-	color: #bbb;
-	font-weight: 400;
-	margin: 0 0 0 6px;
-}
-
-.today {
-	color: #36a5d9;
-}
-
-.meta span, .meta a, .meta i {
-	margin-right: 0.3em;
-}
-
-.action, .action:hover {
-	font-size: 14px;
-	text-decoration: none;
-	cursor: pointer;
-	margin-right: 0.3em;
-}
-
-$mc-border-color: #9197a3;
-
-.message_count {
-	margin: 0 8px;
-  display: inline-block;
-  position: relative;
-  padding: 0px 4px;
-  background: white;
-  color: #4e5665;
-  border: $mc-border-color solid 1px;
-  border-radius: 2px;
-	font-size: 11px;
-  font-weight: normal;
-	text-align: center;
-	white-space: nowrap;
-	min-width: 15px;
-	cursor: pointer;
-	text-decoration: none;
-  @include arrow-left($width: 4px, $length: 4px, $background-color: white, $border-color: $mc-border-color);
-}
-
-.message_count:hover {
-	text-decoration: none;
-}
-
-.like_count {
-	display: inline-block;
-	cursor: pointer;
-	white-space: nowrap;
-	text-align: center;
-	text-decoration: none;
-	@include heart($size: 20px);
-}
-
-.like_count:hover {
-	text-decoration: none;
-}
-
-.reply_form {
-	position: relative;
-	padding: .6em 0 1.2em 4em;
-	width: 100%;
-}
-
-.message_input {
-	width: 100%;
-	height: 100%;
-	min-height: 2em;
-	padding: .6em;
-	overflow: hidden;
-	font-size: .9em;
-	line-height: 1.5;
-	resize: vertical;
-}
-
-.reply_form.focused .reply_controls {
-	display: block;
-}
-.reply_controls {
-	display: none;
-	text-align: right;
-	margin: .6em 0;
-	position: relative;
-}
-
-.upload_button {
-	cursor: pointer;
-	position: absolute;
-	font-size: 20px;
-  right: .4em;
-  top: -2em;
-	text-decoration: none;
-	color: rgba(0,0,0,0.4);
-}
-.upload_button:hover {
-	text-decoration: none;
-	color: $input-focus-color;
-}
+@import "base";
+@import "github";
+@import "replyform";
+@import "counters";
