--- a/lib/common/contextmenu.scss
+++ b/lib/common/contextmenu.scss
@@ -12,3 +12,12 @@
 .context_menu .Popover-tipShape {
   fill: white;
 }
+
+.show_button {
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.show_button:hover {
+	text-decoration: none;
+}
