--- a/components/common/contextmenu.scss
+++ b/components/common/contextmenu.scss
@@ -3,7 +3,6 @@
 .context_menu .Popover-body {
   display: inline-flex;
   flex-direction: column;
-  padding: 2rem 4rem;
   background: white;
   border-radius: 0.3rem;
 	box-shadow: 0 0 10px rgba(0,0,0,0.25);
@@ -11,6 +10,63 @@
 
 .context_menu .Popover-tipShape {
   fill: white;
+}
+
+.context_menu ul {
+	list-style-type: none;
+	margin: .75rem 0;
+	padding: 0;
+}
+
+.context_menu ul li {
+	line-height: 1.5rem;
+	margin: 0;
+}
+
+.context_menu ul li a {
+	cursor: pointer;
+	text-decoration: none;
+	padding: 0 1rem 0 .75rem;
+	margin: 0 .75rem;
+	border-radius: .25rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	outline: 0;
+	font-size: 15px;
+	line-height: 25px;
+	background: 0 0;
+	color: #2c2d30;
+}
+
+.context_menu ul li a:hover {
+	background-color: rgb(0, 156, 255);
+	color: #fff;
+}
+
+.context_menu .header_item {
+	cursor: default;
+	margin: .625rem .75rem;
+	position: relative;
+}
+
+.context_menu .header_item hr {
+	border: 0;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #fff;
+	position: absolute;
+	left: 1rem;
+	right: 0;
+	margin: 1.25rem 0;
+	margin-top: .6rem;
+	margin-bottom: 0;
+}
+
+.context_menu .header_item .header_label {
+	position: relative;
+	background-color: #fff;
+  color: #9e9ea6;
+  padding-right: .8rem;
 }
 
 .show_button {
