--- a/lib/markdown/style.scss
+++ b/lib/markdown/style.scss
@@ -25,6 +25,10 @@
 	font-family: 'Bitstream Vera Sans Mono',Menlo,Monaco,Courier,monospace;
 }
 
+.help_content {
+	margin: 2rem 4rem;
+}
+
 .help_format {
 	padding: .6em 0;
 }
