allow to remove channel

--- a/components/channel/style.scss
+++ b/components/channel/style.scss
@@ -3,3 +3,10 @@
 .btn_add_channel {
 	font-size: 20px;
 }
+
+.btn_remove_channel {
+	margin-left: 4px;
+	font-size: 20px;
+	font-weight: bold;
+	cursor: pointer;
+}
